# pyecotaxa

./: .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.rst  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml  python-package.yml
doc/: conf.py  index.rst
docs/: conf.py  index.rst
pyecotaxa/: _config.py  _version.py  archive.py  remote.py  transfer.py
src/pyecotaxa/: _version.py  archive.py  remote.py
tests/: conftest.py  test_archive.py  test_remote.py  test_transfer.py
