[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "versioneer"]  # PEP 508 specifications.

[tool.black]
exclude = "\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.nox|\\.tox|\\.venv|_build|buck-out|build|dist|versioneer\\.py|_version\\.py|\\.vscode"
line_length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "src/pyecotaxa/_version.py"
versionfile_build = "pyecotaxa/_version.py"
tag_prefix = ""
parentdir_prefix = ""
